@@ -1,5 +1,5 @@
 APACHE 2.0 STATUS:						-*-text-*-
-Last modified at [$Date: 2001/12/07 18:10:25 $]
+Last modified at [$Date: 2001/12/08 01:38:04 $]
 
 Release:
 
@@ -91,12 +91,6 @@ RELEASE SHOWSTOPPERS:
       ap_hook_error_log (or other missing functions -- if there are
       any) to segfault on AIX and can probably cause load or other
       errors on some other platforms.
-
-    * Sending httpd a SIGHUP with worker MPM causes a segfault 
-      when we started as root and switch to a different user.
-        Aaron Says: I've only been able to reproduce this on
-                    Solaris, works fine for Linux. Also, it appears
-                    to be happening in the parent.
 
 RELEASE NON-SHOWSTOPPERS BUT WOULD BE REAL NICE TO WRAP THESE UP:
 
